kuber/getting-started.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getting-started-deployment
  labels:
    app: getting-started
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getting-started
  template:
    metadata:
      labels:
        app: getting-started
    spec:
      containers:
      - name: getting-started
        image: docker/getting-started:latest
        ports:
        - containerPort: 80
