kuber/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-debug
spec:
  containers:
  - name: debug
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - name: mongo-storage
      mountPath: /data
  volumes:
  - name: mongo-storage
    persistentVolumeClaim:
      claimName: mongo-pvc
